--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+
+@import url('https://cdn.bootcss.com/github-markdown-css/2.10.0/github-markdown.min.css');
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+@import url('../src/components/CustomCursor/index.css');
+body::-webkit-scrollbar{
+    display: none;
+}
+.wholecontainer::-webkit-scrollbar{
+    width: 8px;
+}
+.wholecontainer::-webkit-scrollbar-track-piece{
+    background-color: aliceblue;
+}
+.wholecontainer::-webkit-scrollbar-thumb{
+    height: 10px;
+    border-radius: 10px;
+    background-color:var(--Middle);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.wholecontainer{
+  font-family: 'Muli',sans-serif;
+  min-width: 550px;
+  font-weight: 500;
+  box-sizing: border-box;
+  position: relative;
+  width: 100%;
+  padding-right:0px;
+  z-index: 1;
+  height: 1000px;
+  background-color: rgb(255, 232, 237) !important;
+  height: 100%;
 }
