--- a/public/color/color.css
+++ b/public/color/color.css
@@ -7,7 +7,7 @@ html[data-theme='winter']:root {
     --IconDeep: #f1939c81;
     --IconMiddle: #f1939cb0;
     --IconShallow: #f1939cde;
-    --Deep: #f55e69;
+    --Deep: #FF6666;
     --Middle: #f1939c;
     --Shallow: #f0a1a8;
     --Light: #ff9eaf;
