--- a/src/components/BackToHome/index.css
+++ b/src/components/BackToHome/index.css
@@ -1,6 +1,6 @@
 
 .backtohome{
-    background-color: var(--Middle); 
+    background-color: var(--Deep); 
     border-radius: 50%;
     display: flex;
     align-items: center;
