--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,8 @@
 @import url('../src/components/CustomCursor/index.css');
 
 ::-webkit-scrollbar{
-    width: 4px;
-    height: 4px;
+    width: 6px;
+    height: 6px;
 }
 ::-webkit-scrollbar-track-piece{
     background-color: rgb(255, 232, 237)
@@ -16,14 +16,14 @@
 }
 
 .wholecontainer{
-  font-family: 'SawarabiMincho',sans-serif;
+  font-family:'PingFang SC','SawarabiMincho',sans-serif;
   min-width: 550px;
   font-weight: 500;
   box-sizing: border-box;
   position: relative;
   padding-right:0px;
   z-index: 1;
-  background-color: rgb(255, 232, 237) !important;
+  /* background-color: rgb(255, 232, 237) !important; */
 /* height: 100%; */
 
 
