--- a/src/components/BottomNav/index.css
+++ b/src/components/BottomNav/index.css
@@ -5,6 +5,7 @@
     align-items: center;
     /* line-height: 30px; */
     height: 200px;
+    width: 100%;
     padding-bottom: 20px;
 }
 .bottomnav::before{
