增加归档和分类功能,个人页面制作中

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .wholecontainer{
-  font-family:'PingFang SC','SawarabiMincho',sans-serif;
+  font-family:'Courier New', Courier, sans-serif;
   min-width: 550px;
   font-weight: 500;
   box-sizing: border-box;
