--- a/src/components/BottomNav/index.css
+++ b/src/components/BottomNav/index.css
@@ -14,7 +14,8 @@
     background-color: rgb(214, 214, 214);
     width: 100%;
     height: 1px;
-    margin-bottom: 20px;
+    transform: translateY(-20px);
+    /* margin-bottom: 20px; */
 }
 .bottomnav .bottomnavtop{
     display: flex;
