--- a/src/components/BottomNav/index.css
+++ b/src/components/BottomNav/index.css
@@ -7,16 +7,10 @@
     height: 200px;
     width: 100%;
     padding-bottom: 20px;
+    background-color: rgba(255,255, 255,0.7) !important;
+    backdrop-filter: blur(10px) !important;
 }
-.bottomnav::before{
-    content: '';
-    display: block;
-    background-color: rgb(214, 214, 214);
-    width: 100%;
-    height: 1px;
-    transform: translateY(-20px);
-    /* margin-bottom: 20px; */
-}
+
 .bottomnav .bottomnavtop{
     display: flex;
 }
