--- a/src/pages/IntroductionPage/index.css
+++ b/src/pages/IntroductionPage/index.css
@@ -2,7 +2,8 @@
     width: 100vw;
     
     background-size:cover;
-    
+    background-size:cover;
+    background-attachment: fixed;
 }
 .introduction .middle{
     padding: 20px;
@@ -11,22 +12,26 @@
     justify-content: space-around;
     background-size:cover;
     background-attachment: fixed;
-    background-image: url(../../../source/img/background.jpg);
 }
 .introduction .middle .left{
     width: 70%;
+    min-width: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
    flex-direction: column;
+   margin-top: 60px;
 }
-.introduction .middle .left .introducteme{
-    margin-top: 80px;
+.introduction .middle .left #introducteme{
+    margin-top: 40px;
+    margin-bottom: 20px;
     border-radius: 20px;
     width: 100%;
-    height: 2000px;
-    background-color: rgba(255,255, 255,1);
+    min-height: 500px;
+    background-color: rgba(255,255, 255,0.8);
     backdrop-filter: blur(10px);
+    padding: 40px;
+    box-sizing: border-box;
 }
 .introduction .middle .left .comment{
     margin:10px;
