全面重构,拥抱函数式组件

--- a/src/pages/blogpage/index.css
+++ b/src/pages/blogpage/index.css
@@ -1,6 +1,6 @@
 .blogpage{
 display: flex;
-background-color: rgb(255, 248, 250);
+background-color: var(--color--background);
 background-attachment: fixed;
 width: 100vw;
 justify-content: space-around;
