--- a/src/components/HeaderNav/index.css
+++ b/src/components/HeaderNav/index.css
@@ -1,10 +1,9 @@
-@import url('../../App.css');
+@import url('../../index.css');
 .headernav{
-    /* width: 100%; */
+    width: 100%;
     height: 60px;
     overflow: hidden;
     box-sizing: border-box;
-    width: 100%;
     display: flex;
     justify-content: space-between;
     padding:0 14px;
