--- a/src/pages/HomePage/index.css
+++ b/src/pages/HomePage/index.css
@@ -1,18 +1,21 @@
 .HomePage{
     display: flex;
     flex-direction: column;
-    background-color: rgb(255, 248, 250)
+    height: auto;
+    width: 100%;
 }
 .HomePage>.topwrap{
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-size:cover;
     background-attachment: fixed;
     display: flex;
     flex-direction: column;
     position: relative;
+    align-items: center;
 
 }
+
 .name{
     width: 100%;
     height: 80vh;
@@ -59,22 +62,12 @@ transition: all 0.3s;
     }
 
 
-.blogcontainer{
-    margin: 20px;
-    margin-top: 0;
-    padding-top: 60px;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;  
-}
-
 .topbottom{
     display: flex;
     align-items: center;
     justify-content: center;
     position: absolute;
-    width: 100vw;
+    width: 100px;
     height: 20px;
     bottom: 20px;
 }
